--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,22 @@
 .main-form {
-  background-color: red;
+  max-width: 25em;
+  padding: 2em;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+  margin: 2em;
+}
+
+.element {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  padding: .3em 0;
+}
+
+.btn {
+  width: 12px;
+  padding: 0 .2em;
+
+  &:hover {
+    width: 17px;
+    cursor: pointer;
+  }
 }
